--- a/styles/osu-fonts.html
+++ b/styles/osu-fonts.html
@@ -1,3 +1,1 @@
-<link 
-  rel="stylesheet" 
-  href="https://assets.bux.osu.edu/bux-webfonts2/bux-webfonts2.css">
+<link rel="stylesheet" href="https://assets.bux.osu.edu/bux-webfonts2/bux-webfonts2.css" />
